--- a/lab-michael/package.json
+++ b/lab-michael/package.json
@@ -20,5 +20,15 @@
   "bugs": {
     "url": "https://github.com/silvershotm1/lab-07-cowsay-server/issues"
   },
-  "homepage": "https://github.com/silvershotm1/lab-07-cowsay-server#readme"
+  "homepage": "https://github.com/silvershotm1/lab-07-cowsay-server#readme",
+  "devDependencies": {
+    "eslint": "^3.11.1",
+    "gulp": "^3.9.1",
+    "gulp-eslint": "^3.0.1",
+    "gulp-mocha": "^3.0.1",
+    "mocha": "^3.2.0"
+  },
+  "dependencies": {
+    "cowsay": "^1.1.8"
+  }
 }
