--- a/lab-kyle/package.json
+++ b/lab-kyle/package.json
@@ -4,12 +4,15 @@
   "description": "Code Fellows 401 - Lab-07-cowsay-server",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha"
   },
   "keywords": [],
   "author": "Kyle Winckler",
   "license": "ISC",
   "devDependencies": {
-    "gulp": "^3.9.1"
+    "gulp": "^3.9.1",
+    "gulp-eslint": "^3.0.1",
+    "gulp-mocha": "^3.0.1",
+    "mocha": "^3.2.0"
   }
 }
