--- a/lab-carolina/package.json
+++ b/lab-carolina/package.json
@@ -10,6 +10,7 @@
   "author": "carolina ceja",
   "license": "ISC",
   "devDependencies": {
+    "cowsay": "^1.1.8",
     "gulp": "^3.9.1",
     "gulp-eslint": "^3.0.1"
   }
