implemented chai for testing

--- a/lab-kyle/package.json
+++ b/lab-kyle/package.json
@@ -10,6 +10,8 @@
   "author": "Kyle Winckler",
   "license": "ISC",
   "devDependencies": {
+    "chai": "^3.5.0",
+    "chai-http": "^3.0.0",
     "gulp": "^3.9.1",
     "gulp-eslint": "^3.0.1",
     "gulp-mocha": "^3.0.1",
