Added tests for routes

--- a/lab-jessica/package.json
+++ b/lab-jessica/package.json
@@ -17,8 +17,11 @@
   },
   "homepage": "https://github.com/jessicamvs/lab-07-cowsay-server#readme",
   "devDependencies": {
+    "chai": "^3.5.0",
     "gulp": "^3.9.1",
-    "gulp-eslint": "^3.0.1"
+    "gulp-eslint": "^3.0.1",
+    "mocha": "^3.2.0",
+    "superagent": "^3.3.1"
   },
   "dependencies": {
     "cowsay": "^1.1.8"
