--- a/lab-07-JR/package.json
+++ b/lab-07-JR/package.json
@@ -21,5 +21,11 @@
   "homepage": "https://github.com/jurrish/lab-07-cowsay-server#readme",
   "dependencies": {
     "cowsay": "^1.1.8"
+  },
+  "devDependencies": {
+    "chai": "^3.5.0",
+    "gulp": "^3.9.1",
+    "gulp-eslint": "^3.0.1",
+    "gulp-mocha": "^3.0.1"
   }
 }
